# Phone_Manager

./: .env.example  .gitignore  AGENT.md  CONTRIBUTING.md  CURRENT_STATUS.html  Makefile  README.md  config.example.json  config.phone.example.json  pyproject.toml  secrets.example.json
.agents/skills/git-push-summary/: SKILL.md
.cursor/rules/: agent-core-policy.mdc  agent-docs-guidance.mdc  agent-docs-sync-parallel.mdc  agent-src-guidance.mdc  agent-tests-guidance.mdc
.cursor/skills/git-push-summary/: SKILL.md
.github/workflows/: ci.yml
docs/: AGENT.md  agent-workflow.md  architecture.md  environment.md  operations.md  progress.md
docs/decisions/: ADR-0001-adb-only-v1.md  ADR-0002-manifest-before-delete.md  ADR-0003-backup-naming-retention.md  ADR-0004-mtp-desktop-v1.md
docs/templates/: git-push-summary.md
src/: AGENT.md
src/cli/: main.py
src/collectors/: camera.py  whatsapp.py
src/config/: phone_config.py  settings.py
src/core/: pipeline.py
src/devices/: adb_discovery.py
src/logging/: session_log.py
src/safety/: cleanup_gate.py
src/storage/: manifest.py
tests/: AGENT.md
tests/integration/: test_backup_flow.py
tests/unit/: test_pipeline.py  test_settings.py
tools/: check_repo_safety.py  mtp_copy.ps1  mtp_nas_archive.ps1  mtp_shell_common.ps1  read_merged_config.py
